<resources>
    <string name="app_name">MyCalculator</string>
    <string name="zero">0</string>
    <string name="result">0</string>
    <string name="equals">=</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="plus">+</string>
    <string name="div">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
</resources>